# conductor

./: CMakeLists.txt  Makefile  README.md  build.sh  build_deb.sh  cmake_install.cmake  pyproject.toml
examples/: multi_pool_concurrent.py  multiple_task.py  one_shot_abs_time.py  single_python_task.py
src/: conductor.cpp
tests/: test_scheduler_regression.py
